--- a/program/Cargo.toml
+++ b/program/Cargo.toml
@@ -9,3 +9,6 @@ crate-type = ["cdylib", "lib"]
 [dependencies]
 pinocchio = "0.9.2"
 p-amm-interface = { version = "^0", path = "../interface" }
+
+[dev-dependencies]
+solana-program-test = "3.0.0"
